[REFACTOR] Fix PaymentData Handling.